...
            Modifier
                .background(Color.Gray)
                .padding(16.dp),
    ) {
        BibleReaderHalfPillPicker(
            bookAndChapter = "Genesis 1",
            versionAbbreviation = "KJV",
            handleChapterTap = {},
            handleVersionTap = {},
            foregroundColor = Color.Black,
            buttonColor = Color.White,
            compactMode = false,
        )
...
