...
    // ----- State
    data class State(
        val initializing: Boolean = true,
        val permittedMinimalVersions: List<BibleVersion> = emptyList(),
        val activeLanguageVersions: List<BibleVersion> = emptyList(),
        val activeLanguageTag: String = "en",
        val activeLanguageName: String = "English",
        val showBibleVersionLoading: Boolean = false,
        val selectedBibleVersion: BibleVersion? = null,
        val selectedOrganization: Organization? = null,
        val searchQuery: String = "",
    ) {
        val versionsCount: Int
...
